fixing background image on smaller screens.

--- a/css/style3.css
+++ b/css/style3.css
@@ -339,7 +339,7 @@ margin-bottom: 25px;
 
 @media only screen and (min-width: 275px) {
   div.container {
-    height: 470px;
+    height: 500px;
   }
 
   .center {
